fix(linter): add prettier to pre commits

--- a/src/app/components/achieve-toast/toast.component.html
+++ b/src/app/components/achieve-toast/toast.component.html
@@ -1,8 +1,5 @@
 <div class="toast-container">
-  <div
-    class="toast"
-    *ngFor="let toast of toasts()"
-  >
+  <div class="toast" *ngFor="let toast of toasts()">
     <div class="icon" [innerHTML]="toast.icon"></div>
     <div class="text">
       <strong>{{ toast.achievement.title }}</strong>
