--- a/src/app/components/cell/game-cell.component.html
+++ b/src/app/components/cell/game-cell.component.html
@@ -1,25 +1,15 @@
-@let hasHunter = isHunterCell(cell())();
-@let _hunter = hunter();
-@let hasGold = _hunter.hasGold;
+@let hasHunter = isHunterCell(cell())(); @let _hunter = hunter(); @let hasGold = _hunter.hasGold;
 @let isAlive = _hunter.alive;
 
-<div 
-    class="cell"
-    [class.visited]="cell().visited"
-    [class.hunter]="hasHunter"
->
-
-    @if (!isAlive || _hunter.hasWon) {
-        @if (cell().content) {
-            <img [src]="cell().content?.image" alt="arrow" aria-label="arrow"/>
-        }
-    }
-    @if(hasHunter && isAlive){
-        <img
-            [src]="bowImage()"
-            [attr.alt]="hasGold ? 'hunter with gold' : 'hunter'"
-            [attr.aria-label]="hasGold ? 'hunter with gold' : 'hunter'"
-            [style.transform]="'rotate(' + rotation() + 'deg)'"
-        />
-    }
+<div class="cell" [class.visited]="cell().visited" [class.hunter]="hasHunter">
+  @if (!isAlive || _hunter.hasWon) { @if (cell().content) {
+  <img [src]="cell().content?.image" alt="arrow" aria-label="arrow" />
+  } } @if(hasHunter && isAlive){
+  <img
+    [src]="bowImage()"
+    [attr.alt]="hasGold ? 'hunter with gold' : 'hunter'"
+    [attr.aria-label]="hasGold ? 'hunter with gold' : 'hunter'"
+    [style.transform]="'rotate(' + rotation() + 'deg)'"
+  />
+  }
 </div>
