--- a/src/app/components/config/game-config.component.scss
+++ b/src/app/components/config/game-config.component.scss
@@ -14,7 +14,7 @@
     label {
       font-weight: 600;
       margin-bottom: 0.5rem;
-      font-size: .9rem;
+      font-size: 0.9rem;
     }
 
     input {
