--- a/src/app/components/level/game-level.component.html
+++ b/src/app/components/level/game-level.component.html
@@ -1,7 +1,3 @@
-@let level = _level();
-
-@if (level) {
-    <div class="level">
-        Nivel {{ level }}
-    </div>
+@let level = _level(); @if (level) {
+<div class="level">Nivel {{ level }}</div>
 }
