--- a/src/app/components/title/title.component.html
+++ b/src/app/components/title/title.component.html
@@ -5,11 +5,11 @@
       <text x="45" class="neon-letter" style="animation-delay: 0.5s">U</text>
       <text x="90" class="neon-letter" style="animation-delay: 1s">N</text>
       <text x="135" class="neon-letter" style="animation-delay: 1.5s">T</text>
-      <text x="190" class="neon-letter" style="animation-delay: 2s"> </text>
+      <text x="190" class="neon-letter" style="animation-delay: 2s"></text>
       <text x="230" class="neon-letter" style="animation-delay: 2.5s">T</text>
       <text x="275" class="neon-letter" style="animation-delay: 3s">H</text>
       <text x="320" class="neon-letter" style="animation-delay: 3.5s">E</text>
-      <text x="375" class="neon-letter" style="animation-delay: 4s"> </text>
+      <text x="375" class="neon-letter" style="animation-delay: 4s"></text>
       <text x="415" class="neon-letter" style="animation-delay: 4.5s">B</text>
       <text x="460" class="neon-letter" style="animation-delay: 5s">I</text>
       <text x="490" class="neon-letter" style="animation-delay: 5.5s">S</text>
@@ -20,7 +20,9 @@
       <text x="730" class="neon-letter" style="animation-delay: 8s">L</text>
       <text x="775" class="neon-letter" style="animation-delay: 8.5s">O</text>
       @if(blackout()){
-        <text x="295" y="45" class="neon-letter subtitle" style="animation-delay: 10.5s">EL APAGÓN</text>
+      <text x="295" y="45" class="neon-letter subtitle" style="animation-delay: 10.5s">
+        EL APAGÓN
+      </text>
       }
     </g>
   </svg>
