--- a/src/app/components/achievements/achievements.component.scss
+++ b/src/app/components/achievements/achievements.component.scss
@@ -219,7 +219,7 @@
   white-space: normal;
 
   @media (max-width: 400px) {
-    font-size: .8rem;
+    font-size: 0.8rem;
   }
 }
 
@@ -257,11 +257,10 @@
   color: #a0aec0;
   margin-bottom: 1rem;
   line-height: 1.3;
-  font-size: .9rem;
-
+  font-size: 0.9rem;
 
   @media (max-width: 400px) {
-    font-size: .7rem;
+    font-size: 0.7rem;
   }
 }
 
