--- a/src/app/components/animations/attack/app-wumpus-attack-animation.component.scss
+++ b/src/app/components/animations/attack/app-wumpus-attack-animation.component.scss
@@ -18,7 +18,8 @@
   height: 300px;
 }
 
-.player, .wumpus {
+.player,
+.wumpus {
   position: absolute;
   top: 50%;
   transition: all 0.5s ease-in-out;
