--- a/src/app/components/controls/game-controls.component.scss
+++ b/src/app/components/controls/game-controls.component.scss
@@ -1,4 +1,3 @@
-
 .controller-icon {
   min-width: 0;
   background: none;
@@ -31,25 +30,27 @@
   z-index: 10;
   width: 280px;
 
-  &.show{ display: block;}
+  &.show {
+    display: block;
+  }
 
   .close-btn {
-      position: absolute;
-      top: 5px;
-      right: 5px;
-      margin:0;
-      padding: 0;
-      background: transparent;
-      border: none;
-      font-size: 2.5rem;
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    margin: 0;
+    padding: 0;
+    background: transparent;
+    border: none;
+    font-size: 2.5rem;
+    cursor: pointer;
+    line-height: 1;
+    min-width: 20px;
+    width: 40px;
+    &:hover {
       cursor: pointer;
-      line-height: 1;
-      min-width: 20px;
-      width: 40px;
-      &:hover{
-        cursor: pointer;
-        color: #00ff5e;
-      }
+      color: #00ff5e;
+    }
   }
 
   .title {
@@ -57,7 +58,7 @@
     margin-bottom: 0.5rem;
     text-align: center;
     border-bottom: 1px solid #666;
-    padding-bottom: 0.4rem;  
+    padding-bottom: 0.4rem;
   }
 
   .control-list {
@@ -85,4 +86,3 @@
     }
   }
 }
-
