--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,30 +1,24 @@
 @let opened = isOpen();
 
-<button 
-    class="menu-toggle" 
-    [class.open]="opened"
-    (click)="toggleMenu()"  
->
-  <div [ngClass]="{ 'bar': true, 'bar1': true, 'open': opened }"></div>
-  <div [ngClass]="{ 'bar': true, 'bar2': true, 'open': opened }"></div>
-  <div [ngClass]="{ 'bar': true, 'bar3': true, 'open': opened }"></div>
+<button class="menu-toggle" [class.open]="opened" (click)="toggleMenu()">
+  <div [ngClass]="{ bar: true, bar1: true, open: opened }"></div>
+  <div [ngClass]="{ bar: true, bar2: true, open: opened }"></div>
+  <div [ngClass]="{ bar: true, bar3: true, open: opened }"></div>
 </button>
 
 <div class="mobile-menu" *ngIf="opened">
   <ul>
-    <li> <button>&nbsp;</button> </li>
+    <li><button>&nbsp;</button></li>
     <li><button (click)="nagivateTo('home')">Inicio</button></li>
     <li><button (click)="nagivateTo('logros')">Logros</button></li>
     <li><button (click)="newGame()" class="newgame">Nueva partida</button></li>
   </ul>
 </div>
 
-
-
 <div class="menu-desktop">
   <div class="left-icons">
     <app-scoreboard />
-    <img class="achivements" routerLink="/logros" src="trophy.svg" alt="logros">
+    <img class="achivements" routerLink="/logros" src="trophy.svg" alt="logros" />
   </div>
   <div class="right-icon">
     <ng-content></ng-content>
