--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -8,7 +8,6 @@
   z-index: 999;
   background: none;
 
-
   .bar {
     position: absolute;
     width: 100%;
@@ -17,9 +16,21 @@
     transition: 0.3s ease;
   }
 
-  .bar1 { top: 15px; left: 15px; width:30px }
-  .bar2 { top: 25px; left: 15px; width:30px }
-  .bar3 { top: 35px; left: 15px; width:30px }
+  .bar1 {
+    top: 15px;
+    left: 15px;
+    width: 30px;
+  }
+  .bar2 {
+    top: 25px;
+    left: 15px;
+    width: 30px;
+  }
+  .bar3 {
+    top: 35px;
+    left: 15px;
+    width: 30px;
+  }
 
   .bar1.open {
     transform: rotate(45deg);
@@ -45,7 +56,7 @@
     list-style: none;
     background: #1d1d1d;
     border: 2px solid #00ffcc;
-    font-family: "Press Start 2P", monospace;
+    font-family: 'Press Start 2P', monospace;
     color: #00ffcc;
     overflow: hidden;
     box-shadow: 0 4px 12px rgba(0, 255, 204, 0.2);
@@ -69,16 +80,15 @@
         background: none;
         margin: 0;
         padding: 16px;
-        font-family: "Press Start 2P", monospace;
+        font-family: 'Press Start 2P', monospace;
         width: 100%;
-        &.newgame{
+        &.newgame {
           color: red;
         }
       }
     }
   }
 }
-
 
 .menu-desktop {
   display: flex;
