--- a/src/app/components/ranking/score-board.component.scss
+++ b/src/app/components/ranking/score-board.component.scss
@@ -1,57 +1,55 @@
-
 .scoreboard {
   position: fixed;
   top: 20px;
-  left: 110px; 
+  left: 110px;
   background-color: rgba(20, 20, 20, 1);
   color: white;
   border-radius: 8px;
   padding: 1.5rem;
   width: 300px;
   max-height: 80vh;
-  overflow-y: auto; 
-  display: none; 
+  overflow-y: auto;
+  display: none;
   transition: opacity 0.3s ease-in-out;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
-  font-family: "Segoe UI", sans-serif;
+  font-family: 'Segoe UI', sans-serif;
   z-index: 25;
 
-    .header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 
-    .title {
-      font-size: 1.1rem;
-      margin-top: 0.5rem;
-      margin-bottom: 0.5rem;
-      text-align: center;
-      border-bottom: 1px solid #666;
-      padding-bottom: 0.4rem;
-      font-weight: bold;
-      font-family: 'Press Start 2P', monospace;
-    }
+  .title {
+    font-size: 1.1rem;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    text-align: center;
+    border-bottom: 1px solid #666;
+    padding-bottom: 0.4rem;
+    font-weight: bold;
+    font-family: 'Press Start 2P', monospace;
+  }
 
-    .close-btn {
-      position: absolute;
-      top: 5px;
-      right: 5px;
-      margin:0;
-      padding: 0;
-      background: transparent;
-      border: none;
-      font-size: 2.5rem;
+  .close-btn {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    margin: 0;
+    padding: 0;
+    background: transparent;
+    border: none;
+    font-size: 2.5rem;
+    cursor: pointer;
+    line-height: 1;
+    min-width: 20px;
+    width: 40px;
+    &:hover {
       cursor: pointer;
-      line-height: 1;
-      min-width: 20px;
-      width: 40px;
-      &:hover{
-        cursor: pointer;
-        color: #00ff5e;
-      }
+      color: #00ff5e;
     }
-
+  }
 }
 
 .scoreboard.show {
@@ -73,7 +71,7 @@
   }
 }
 
-.trophy-icon{
+.trophy-icon {
   min-width: 0;
   background: none;
   padding: 0;
