refactor(achieve): refactor svg achivemetns icons

--- a/src/app/components/achievements/achievements.component.html
+++ b/src/app/components/achievements/achievements.component.html
@@ -71,10 +71,11 @@
               }"
               class="achievement-icon-container"
             >
-              <div
+              <img
                 class="achievement-icon"
-                [innerHTML]="getSanitizedSvg(achievement.svgIcon)"
-              ></div>
+                [src]="'achievements/'+achievement.svgIcon + '.svg'"
+                [alt]="achievement.title"
+              />
             </div>
             <div>
               <h3 class="achievement-title">{{ achievement.title }}</h3>
