--- a/src/app/components/achieve-toast/toast.component.html
+++ b/src/app/components/achieve-toast/toast.component.html
@@ -1,6 +1,10 @@
 <div class="toast-container">
   <div class="toast" *ngFor="let toast of toasts()">
-    <div class="icon" [innerHTML]="toast.icon"></div>
+      <img
+        class="icon"
+                [src]="'achievements/' + toast.achievement.svgIcon + '.svg'"
+                [alt]="toast.achievement.title"
+              />
     <div class="text">
       <strong>{{ toast.achievement.title }}</strong>
     </div>
