--- a/src/app/components/controls/mobile/mobile-controls.component.html
+++ b/src/app/components/controls/mobile/mobile-controls.component.html
@@ -1,23 +1,23 @@
 @if(!isFinish()){
-<div class="mobile-controls">
-  <button class="control-btn" (click)="turnRight()" aria-label="Girar a la derecha">
-    <img src="rotate-r.svg" width="32" height="32" alt="girar iz" />
-  </button>
+  <div class="mobile-controls">
+    <button class="control-btn" (click)="turnRight()" aria-label="Girar a la derecha">
+      <img ngSrc="rotate-r.svg" width="32" height="32" alt="girar iz"  priority/>
+    </button>
 
-  <button class="control-btn" (click)="shootArrow()" aria-label="Disparar flecha">
-    <img src="shoot.svg" width="32" height="32" alt="disparar" />
-  </button>
+    <button class="control-btn" (click)="shootArrow()" aria-label="Disparar flecha">
+      <img ngSrc="shoot.svg" width="32" height="32" alt="disparar" priority/>
+    </button>
 
-  <button class="control-btn" (click)="moveForward()" aria-label="Avanzar">
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      width="32"
-      height="32"
-      fill="currentColor"
-      viewBox="0 0 24 24"
-    >
-      <path d="M12 2l8 8h-6v8h-4v-8H4z" />
-    </svg>
-  </button>
-</div>
+    <button class="control-btn" (click)="moveForward()" aria-label="Avanzar">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="32"
+        height="32"
+        fill="currentColor"
+        viewBox="0 0 24 24"
+      >
+        <path d="M12 2l8 8h-6v8h-4v-8H4z" />
+      </svg>
+    </button>
+  </div>
 }
