--- a/src/app/components/cell/game-cell.component.scss
+++ b/src/app/components/cell/game-cell.component.scss
@@ -8,14 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-
-  img {
-    max-width: 100%;
-    max-height: 100%;
-    width: auto;
-    height: auto;
-    object-fit: contain;
-  }
+  position: relative;
 
   &.hunter {
     background-color: #f8f8f8;
