--- a/src/app/components/cell/game-cell.component.html
+++ b/src/app/components/cell/game-cell.component.html
@@ -1,10 +1,11 @@
 @let hasHunter = isHunterCell(cell())(); @let _hunter = hunter(); @let hasGold = _hunter.hasGold;
 @let isAlive = _hunter.alive;
+@let content = cell().content;
 
 <div class="cell" [class.visited]="cell().visited" [class.hunter]="hasHunter">
-  @if (!isAlive || _hunter.hasWon) { @if (cell().content) {
-  <img [src]="cell().content?.image" alt="arrow" aria-label="arrow" />
-  } } @if(hasHunter && isAlive){
+  @if ((!isAlive || _hunter.hasWon) && content) {
+  <img [ngSrc]="content.image" [alt]="content.alt" fill/>
+  } @if(hasHunter && isAlive){
   <img
     [ngSrc]="bowImage()"
     [attr.alt]="hasGold ? 'hunter with gold' : 'hunter'"
