fix(mobile): fix mobile menu does not stick to top

--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -130,7 +130,8 @@
 
   .mobile-menu {
     display: block;
-    position: relative;
+    position: fixed;
     z-index: 6;
+    width: 100%;
   }
 }
