--- a/src/app/components/cell/game-cell.component.html
+++ b/src/app/components/cell/game-cell.component.html
@@ -1,10 +1,9 @@
 @let hasHunter = isHunterCell(cell())(); @let _hunter = hunter(); @let hasGold = _hunter.hasGold;
-@let isAlive = _hunter.alive;
-@let content = cell().content;
+@let isAlive = _hunter.alive; @let content = cell().content;
 
 <div class="cell" [class.visited]="cell().visited" [class.hunter]="hasHunter">
   @if ((!isAlive || _hunter.hasWon) && content) {
-  <img [ngSrc]="content.image" [alt]="content.alt" fill/>
+  <img [ngSrc]="content.image" [alt]="content.alt" fill />
   } @if(hasHunter && isAlive){
   <img
     [ngSrc]="bowImage()"
