--- a/src/app/components/cell/game-cell.component.html
+++ b/src/app/components/cell/game-cell.component.html
@@ -2,7 +2,7 @@
 @let isAlive = _hunter.alive; @let content = cell().content;
 
 <div class="cell" [class.visited]="cell().visited" [class.hunter]="hasHunter">
-  @if ((!isAlive || _hunter.hasWon) && content) {
+  @if ((!isAlive || _hunter.hasWon || showItems) && content) {
   <img [ngSrc]="content.image" [alt]="content.alt" fill />
   } @else if(hasHunter && isAlive){
   <img
