feat(finalending): add ending prize

--- a/src/app/components/message/game-message.component.html
+++ b/src/app/components/message/game-message.component.html
@@ -17,8 +17,8 @@
     Felicidades click para empezar el siguiente nivel.
   </button>
   }@else {
-  <button class="newgame" aria-label="Nuevo nivel">
-    FELICIDADES!! Has completado todos los niveles!
+  <button class="newgame" aria-label="Nuevo nivel" (click)="goToprizeScreen()">
+    FELICIDADES!! Has completado todos los niveles, has click para reclamar tu recompensa.
   </button>
   } } }
 </section>
