--- a/src/app/pages/hunt-bisho.component.html
+++ b/src/app/pages/hunt-bisho.component.html
@@ -11,7 +11,9 @@ hunterData.alive; @let hasWon = hunterData.hasWon; @let settings = game.settings
     @if (settings.size) { @for (row of board; track $index) {
     <div class="row">
       @for (cell of row; track $index) {
+
       <app-game-cell
+        [class.limit]="$index % 11 === 0 && !$last && !$first"
         class="size-{{ boardSize }}"
         [cell]="cell"
         [hunter]="hunterData"
