--- a/src/app/components/cell/game-cell.component.html
+++ b/src/app/components/cell/game-cell.component.html
@@ -2,13 +2,16 @@
 @let isAlive = _hunter.alive; @let content = cell().content; @let size = settings().size;
 
 <div class="cell" [class.visited]="cell().visited" [class.hunter]="hasHunter">
-  @if ((!isAlive || _hunter.hasWon || showItems) && content) {
+  @if ((!isAlive || _hunter.hasWon || showItems || cell().visited) && content) {
   <img [ngSrc]="content.image" [alt]="content.alt" fill />
   } @else if(hasHunter && isAlive){
   <img
+    [class.lantern]="hasLantern()"
+    [class.shield]="hasShield()"
     [ngSrc]="bowImage()"
     [attr.alt]="hasGold ? 'hunter with gold' : 'hunter'"
     [style.transform]="rotation() !== 180 ? 'rotate(' + rotation() + 'deg)' : 'scaleX(-1)'"
+    priority
     fill
   />
 
