feat(credits): add end credits

--- a/src/app/pages/credits/end-credits.component.css
+++ b/src/app/pages/credits/end-credits.component.css
@@ -55,7 +55,7 @@
 
 .creditos-ventana::before,
 .creditos-ventana::after {
-  content: "";
+  content: '';
   position: absolute;
   left: 0;
   right: 0;
