feat(credits): add credtis

--- a/src/app/pages/credits/end-credits.component.html
+++ b/src/app/pages/credits/end-credits.component.html
@@ -9,7 +9,7 @@
       {{ autoScroll() ? 'Pausar' : 'Reanudar' }}
     </button>
     <button class="boton-creditos" (click)="resetScroll()">Reiniciar</button>
-    <button class="boton-creditos" (click)="newGame()">Saltar creditos</button>
+    <button class="boton-creditos red" (click)="newGame()">Empezar nueva partida</button>
   </div>
 
   <div class="creditos-ventana">
