--- a/src/app/pages/shop/shop.component.scss
+++ b/src/app/pages/shop/shop.component.scss
@@ -126,13 +126,15 @@
 
 .mensaje-compra {
   position: fixed;
+  width: 90%;
+  max-width: 600px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 9999;
 
   background-color: white;
-  padding: 3rem 2rem;
+  padding: 4rem 2rem;
   border-radius: 10px;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
   text-align: center;
