feat(rules): add rules page

--- a/src/app/pages/shop/shop.component.html
+++ b/src/app/pages/shop/shop.component.html
@@ -1,7 +1,7 @@
 <div class="tienda-container">
   <div class="tienda-content">
     <div class="tienda-info-panel">
-      <h1 class="tienda-titulo">Tienda de objetos</h1>
+      <h1 class="tienda-titulo">Tienda</h1>
       <p class="tienda-subtitulo">Compra objetos para ayudarte en el siguiente nivel.</p>
 
       <div class="monedas-inventario">
